# q_tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
qtools/: .gitignore  pyproject.toml
qtools/qtools/: __init__.py
qtools/qtools/data/: boxes.py  iters.py  numerical.py
qtools/qtools/image/: im_utils.py  img_data.py  view.py
qtools/tests/: test_image.py
