[tool.poetry]
name = "qtools"
version = "0.1.0"
description = ""
authors = ["Burhan <62214284+Burhan-Q@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.22.2"
opencv-python = ">=4.6.0"
pillow = "^10.1.0"
pyyaml = "^6.0.1"
requests = "^2.31.0"
pandas = "^2.1.4"
psutil = "^5.9.6"
py-cpuinfo = "^9.0.0"
opencv-contrib-python = "^4.8.1.78"
joblib = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
